# CppExchangeSim

./: CMakeLists.txt  HEATMAP_TROUBLESHOOTING.md  HeatmapBuffer.h  L2HeatmapHook.h  L2PrinterHook.h  L2WasmHook.h  L2_viz.html  Makefile  README.md  README_DYNAMIC_SPEED_CONTROL.md  README_HEATMAP.md  README_JAVASCRIPT_TIMING.md  README_WASM.md  RealTimeBusWasm.h  ZeroIntelligenceMarketMaker.h  debug_heatmap.js  exchange_simulation.js  exchange_simulation.wasm  heatmap.html  heatmap_callback_debug.js  heatmap_fix.js  index.html  l2GeneratorWorker.js  main.cpp  task_v0.txt  task_v1.txt  test_heatmap_integration.md  text_l2.html  viz_proto copy 2.html  viz_proto copy 3.html  viz_proto copy.html  viz_proto.html  wasm_main.cpp  worker copy.html  worker.html
old_0/: main.cpp
old_0/src/: AlgoBase.h  CancelFairy.h  EventBus.h  ExchangeAdapter.h  ExchangeServer.h  ZeroIntelligenceMarketMaker.h
old_1/: main.cpp
old_1/src/: CancelFairy.h  EventBus.h  ExchangeAdapter.h  Model.h  Simulation.h  ZeroIntelligenceMarketMaker.h
old_2/: main.cpp
old_2/src/: CancelFairy.h  ExchangeAdapter.h  ExchangeServer.h  Globals.h  L2SnapshotCollector.h  OrderBookCore.h
old_3/src/: EventBus.h  Model.h  Simulation.h  ZeroIntelligenceMarketMaker.h
old_4/: main.cpp
old_4/src/: EventBus.h  ExchangeServer.h  Inventory.h  L2SnapshotCollector.h  RealTimeBus.h  RealTimeBus_fps.h  ZeroIntelligenceMarketMaker.h
old_5/src/: CancelFairy.h  EnvironmentProcessor.h  Logging.h  (+1 more)
src/: AlgoBase.h  EventBus.h  Globals.h  Model.h  OrderBookCore.h  PrePublishHookBase.h  RealTimeBus.h  TradingSimulation.h
